--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ header {
     border-bottom: solid 2px rgba(189, 189, 189, 0);
     padding: 20px;
     font-size: 32px;
-    color: rgb(102, 102, 102);
+    color: #ffffff;
 }
 
 .chamada {
