--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    color: white;
+    color: rgb(145, 145, 145);
     background: rgb(0, 0, 0);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
