--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,14 @@ body {
 }
 
 header {
-    border-bottom: solid 2px rgba(119, 119, 119, 0);
+    border-bottom: solid 2px rgba(212, 212, 212, 0);
     padding: 20px;
     font-size: 32px;
     color: #ffffff;
 }
 
 .chamada {
-    background: rgba(124, 124, 124, 0);
+    background: rgb(110, 110, 110);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
