--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,14 @@ body {
 }
 
 header {
-    border-bottom: solid 2px rgba(212, 212, 212, 0);
+    border-bottom: solid 2px rgba(255, 255, 255, 0);
     padding: 20px;
     font-size: 32px;
-    color: #ffffff;
+    color: #000000;
 }
 
 .chamada {
-    background: rgb(179, 179, 179);
+    background: rgb(255, 36, 36);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
