--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ header {
     border-bottom: solid 2px rgba(255, 255, 255, 0);
     padding: 20px;
     font-size: 32px;
-    color: #000000;
+    color: #ffffff;
 }
 
 .chamada {
